tests/baselines/reference/parserUnparsedTokenCrash1.errors.txt
a.js(1,9): error TS1005: ')' expected.
a.js(1,13): error TS1005: ';' expected.


==== a.js (2 errors) ====
    ( y = 1 ; 2 )
            ~
!!! error TS1005: ')' expected.
                ~
!!! error TS1005: ';' expected.
    